--- a/RecipesProject/Base.lproj/Main.storyboard
+++ b/RecipesProject/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
             </objects>
             <point key="canvasLocation" x="116.92307692307692" y="-2.1327014218009479"/>
         </scene>
-        <!--Item 2-->
+        <!--Авторы-->
         <scene sceneID="I6f-Ro-VUj">
             <objects>
                 <viewController id="iH4-tV-iOT" sceneMemberID="viewController">
@@ -96,7 +96,7 @@
                         <viewLayoutGuide key="safeArea" id="FoP-xT-OKU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="4DS-KP-qME"/>
+                    <tabBarItem key="tabBarItem" title="Авторы" image="australsign.square.fill" catalog="system" landscapeImage="10" id="4DS-KP-qME"/>
                     <toolbarItems>
                         <barButtonItem title="LOG OUT" image="arrowshape.turn.up.left.2.fill" catalog="system" style="plain" id="ZxN-z9-wSH">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="ftq-a1-t5M">
@@ -114,6 +114,21 @@
                 <exit id="7NB-N8-I0o" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2483.0769230769229" y="738.62559241706163"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="uid-9j-FxY">
+            <objects>
+                <viewController id="rNl-f5-PG0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VpH-Zz-hwq">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="LhT-fG-yLs"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e7I-4o-efT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1431" y="1420"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rcZ-8w-nOn">
@@ -133,11 +148,11 @@
             </objects>
             <point key="canvasLocation" x="934" y="3"/>
         </scene>
-        <!--Item 1-->
+        <!--Рецепты-->
         <scene sceneID="4Ga-us-Rwh">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="UrV-wU-ElA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="xGL-lY-F8J"/>
+                    <tabBarItem key="tabBarItem" title="Рецепты" image="book.fill" catalog="system" id="xGL-lY-F8J"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="s87-DP-0Wa">
                         <autoresizingMask key="autoresizingMask"/>
@@ -158,7 +173,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="qTQ-VL-3Js">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemBrownColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="88" id="glL-Bb-tZ0" customClass="RecipesTableViewCell" customModule="RecipesProject" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="390" height="88"/>
@@ -175,24 +190,37 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f18-yL-0Qy">
-                                            <rect key="frame" x="125.66666666666667" y="19.666666666666668" width="228.33333333333331" height="48.666666666666657"/>
+                                            <rect key="frame" x="125.66666666666667" y="25" width="248.33333333333331" height="38"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hin-LL-LE3">
-                                                    <rect key="frame" x="93.666666666666671" y="0.0" width="41.333333333333329" height="20.333333333333332"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hin-LL-LE3">
+                                                    <rect key="frame" x="0.0" y="0.0" width="248.33333333333334" height="15.666666666666666"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="Label">
+                                                            <attributes>
+                                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                                <font key="NSFont" size="14" name="Arial-BoldMT"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bF-25-OwF">
-                                                    <rect key="frame" x="93.666666666666671" y="28.333333333333336" width="41.333333333333329" height="20.333333333333336"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bF-25-OwF">
+                                                    <rect key="frame" x="0.0" y="23.666666666666664" width="248.33333333333334" height="14.333333333333336"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Hin-LL-LE3" firstAttribute="leading" secondItem="f18-yL-0Qy" secondAttribute="leading" id="KaQ-78-sgZ"/>
+                                                <constraint firstItem="Hin-LL-LE3" firstAttribute="top" secondItem="f18-yL-0Qy" secondAttribute="top" id="bsC-o5-dID"/>
+                                                <constraint firstItem="1bF-25-OwF" firstAttribute="leading" secondItem="f18-yL-0Qy" secondAttribute="leading" id="usa-TQ-cAK"/>
+                                            </constraints>
                                         </stackView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="f18-yL-0Qy" secondAttribute="trailing" constant="16" id="0WJ-5H-6Zw"/>
                                         <constraint firstItem="Pun-BW-e2D" firstAttribute="centerY" secondItem="shP-eW-XXe" secondAttribute="centerY" id="2se-fV-o62"/>
                                         <constraint firstItem="Pun-BW-e2D" firstAttribute="leading" secondItem="shP-eW-XXe" secondAttribute="leading" constant="16" id="E1r-Kg-Zj8"/>
                                         <constraint firstItem="Pun-BW-e2D" firstAttribute="leading" secondItem="shP-eW-XXe" secondAttribute="leading" constant="16" id="P8V-zG-Bdh"/>
@@ -201,6 +229,7 @@
                                         <constraint firstItem="f18-yL-0Qy" firstAttribute="leading" secondItem="Pun-BW-e2D" secondAttribute="trailing" constant="10" id="vl3-Q5-3hz"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
                                 <connections>
                                     <outlet property="descriptionLabel" destination="1bF-25-OwF" id="4aR-PJ-a1a"/>
                                     <outlet property="imageIV" destination="Pun-BW-e2D" id="F2r-HL-1be"/>
@@ -215,7 +244,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="o8n-gD-wuU"/>
                     <connections>
-                        <segue destination="iH4-tV-iOT" kind="show" identifier="siteSegue" id="Eky-Ij-0d8"/>
+                        <segue destination="rNl-f5-PG0" kind="presentation" identifier="siteSegue" id="3Y3-7w-OWd"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IA1-ya-6l8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -223,13 +252,16 @@
             <point key="canvasLocation" x="1432" y="739"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="Eky-Ij-0d8"/>
-    </inferredMetricsTieBreakers>
     <resources>
+        <image name="10" width="1024" height="806"/>
         <image name="arrowshape.turn.up.left.2.fill" catalog="system" width="128" height="86"/>
+        <image name="australsign.square.fill" catalog="system" width="128" height="114"/>
+        <image name="book.fill" catalog="system" width="128" height="95"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
