--- a/RecipesProject/Base.lproj/Main.storyboard
+++ b/RecipesProject/Base.lproj/Main.storyboard
@@ -12,58 +12,70 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="RecipesProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" colorLabel="IBBuiltInLabel-Gray">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="9vI-mM-hMZ">
-                                <rect key="frame" x="16" y="190" width="358" height="331"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="alC-0f-pdy">
+                                <rect key="frame" x="16" y="224" width="358" height="276"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JAM-u3-aL9">
-                                        <rect key="frame" x="0.0" y="0.0" width="358" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-iI-mcN">
-                                        <rect key="frame" x="0.0" y="74" width="358" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="bdP-1F-aCk">
+                                        <rect key="frame" x="0.0" y="0.0" width="358" height="99.666666666666671"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="JAM-u3-aL9">
+                                                <rect key="frame" x="0.0" y="0.0" width="358" height="38.333333333333336"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-iI-mcN">
+                                                <rect key="frame" x="0.0" y="61.333333333333314" width="358" height="38.333333333333343"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="29u-oN-1xk">
-                                        <rect key="frame" x="0.0" y="148" width="358" height="34.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="145.66666666666669" width="358" height="50"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Login"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Log In">
+                                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <action selector="loginButtonAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="b0K-9u-u6h"/>
                                             <segue destination="IAP-19-KFZ" kind="presentation" identifier="showRecipes" modalPresentationStyle="fullScreen" id="JDR-qT-1OY"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPb-nZ-S8V">
-                                        <rect key="frame" x="0.0" y="222.33333333333331" width="358" height="34.333333333333314"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Forgot Login"/>
-                                        <connections>
-                                            <action selector="forgotButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8au-I0-W2r"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odX-vE-ttg">
-                                        <rect key="frame" x="0.0" y="296.66666666666669" width="358" height="34.333333333333314"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Forgot Password"/>
-                                        <connections>
-                                            <action selector="forgotButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L5w-BD-Fgx"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Crf-tz-Nhd">
+                                        <rect key="frame" x="0.0" y="241.66666666666671" width="358" height="34.333333333333343"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPb-nZ-S8V">
+                                                <rect key="frame" x="0.0" y="0.0" width="175" height="34.333333333333336"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Forgot User Name"/>
+                                                <connections>
+                                                    <action selector="forgotButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8au-I0-W2r"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odX-vE-ttg">
+                                                <rect key="frame" x="183" y="0.0" width="175" height="34.333333333333336"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Forgot Password"/>
+                                                <connections>
+                                                    <action selector="forgotButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L5w-BD-Fgx"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemMintColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9vI-mM-hMZ" secondAttribute="trailing" constant="16" id="2JB-Yn-hyQ"/>
-                            <constraint firstItem="9vI-mM-hMZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="143" id="FdX-hR-hWw"/>
-                            <constraint firstItem="9vI-mM-hMZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IJv-0b-HA2"/>
-                            <constraint firstItem="9vI-mM-hMZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="d7x-9Y-mIJ"/>
+                            <constraint firstItem="alC-0f-pdy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="6Zp-li-XbR"/>
+                            <constraint firstItem="alC-0f-pdy" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="JbC-6E-iMi"/>
+                            <constraint firstItem="alC-0f-pdy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fbl-c2-Z9o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="alC-0f-pdy" secondAttribute="trailing" constant="16" id="gtc-XO-2SU"/>
                         </constraints>
                     </view>
                     <connections>
@@ -154,7 +166,6 @@
         <!--Item 1-->
         <scene sceneID="4Ga-us-Rwh">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RwE-sZ-vrb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UrV-wU-ElA" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item 1" id="xGL-lY-F8J"/>
                     <toolbarItems/>
@@ -167,6 +178,7 @@
                         <segue destination="bhC-pQ-FSl" kind="relationship" relationship="rootViewController" id="Nmh-yI-KTq"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RwE-sZ-vrb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="436.92307692307691" y="738.62559241706163"/>
         </scene>
@@ -175,6 +187,9 @@
         <image name="arrowshape.turn.up.left.2.fill" catalog="system" width="128" height="86"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
